manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-app-ing
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: main-app-svc
          servicePort: main-app
      - path: /foo
        backend:
          serviceName: main-app-svc
          servicePort: pong-app
